--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
     </nav>
   </aside>
 
-  <section class="content" style="position: relative;">
+  <section class="content">
     @if (loading()) {
       <app-loading-indicator/>
     }
