--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,8 @@
         emptyText="No tables found"
         [items]="tableItems()"
         [selected]="selectedListItem()"
-        (select)="selectListItem($event)">
+        (selectionChange)="selectListItem($event)"
+      >
       </app-nav-section>
 
       <mat-divider></mat-divider>
@@ -16,14 +17,15 @@
         emptyText="No views found"
         [items]="viewItems()"
         [selected]="selectedListItem()"
-        (select)="selectListItem($event)">
+        (selectionChange)="selectListItem($event)"
+      >
       </app-nav-section>
     </nav>
   </aside>
 
   <section class="content">
     @if (loading()) {
-      <app-loading-indicator/>
+      <app-loading-indicator />
     }
 
     <div class="table-container">
@@ -37,24 +39,18 @@
       >
         @for (columnName of columnNames(); track columnName) {
           <ng-container [matColumnDef]="columnName">
-            <th
-              mat-header-cell
-              *matHeaderCellDef
-              [mat-sort-header]="columnName">
+            <th mat-header-cell *matHeaderCellDef [mat-sort-header]="columnName">
               {{ columnName }}
             </th>
 
-            <td
-              mat-cell
-              *matCellDef="let row"
-              [class.numeric]="isNumber(row[columnName])">
+            <td mat-cell *matCellDef="let row" [class.numeric]="isNumber(row[columnName])">
               {{ row[columnName] }}
             </td>
           </ng-container>
         }
 
         <tr mat-header-row *matHeaderRowDef="columnNames(); sticky: true"></tr>
-        <tr mat-row *matRowDef="let row; columns: columnNames();"></tr>
+        <tr mat-row *matRowDef="let row; columns: columnNames()"></tr>
       </table>
     </div>
 
@@ -65,7 +61,8 @@
       [pageIndex]="pageIndex()"
       [pageSize]="pageSize()"
       [hidePageSize]="true"
-      (page)="onPage($event)">
+      (page)="onPage($event)"
+    >
     </mat-paginator>
   </section>
 </div>
