--- a/src/app/components/loading-indicator/loading-indicator.scss
+++ b/src/app/components/loading-indicator/loading-indicator.scss
@@ -1,5 +1,3 @@
-
-
 :host {
   position: absolute;
   display: flex;
@@ -7,7 +5,7 @@
   justify-content: center;
   top: 0;
   left: 0;
-  background: rgba(255,255,255,0.5);
+  background: rgba(255, 255, 255, 0.5);
   width: 100%;
   height: 100%;
   z-index: 10000;
