--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,14 +6,16 @@
 @use '@angular/material' as mat;
 
 html {
-  @include mat.theme((
-    color: (
-      primary: mat.$azure-palette,
-      tertiary: mat.$blue-palette,
-    ),
-    typography: Roboto,
-    density: -2,
-  ));
+  @include mat.theme(
+    (
+      color: (
+        primary: mat.$azure-palette,
+        tertiary: mat.$blue-palette,
+      ),
+      typography: Roboto,
+      density: -2,
+    )
+  );
 }
 
 body {
@@ -35,34 +37,35 @@ body {
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body {
+html,
+body {
   height: 100%;
 }
 
 body {
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
-
 
 // Customize the entire app. Change :root to your selector if you want to scope the styles.
 :root {
-  @include mat.table-overrides((
-    header-headline-color: white,
-    row-item-outline-color: var(--mat-sys-outline-variant),
-    header-container-height: 40px,
-    row-item-container-height: 35px,
-    row-item-outline-width: 0
-  ));
-  @include mat.toolbar-overrides((
-    standard-height: 50px,
-    mobile-height: 50px
-  ));
+  @include mat.table-overrides(
+    (
+      header-headline-color: white,
+      row-item-outline-color: var(--mat-sys-outline-variant),
+      header-container-height: 40px,
+      row-item-container-height: 35px,
+      row-item-outline-width: 0,
+    )
+  );
+  @include mat.toolbar-overrides(
+    (
+      standard-height: 50px,
+      mobile-height: 50px,
+    )
+  );
 
   .mat-mdc-table thead {
     background-color: var(--mat-sys-primary); // or surface-variant, etc.
   }
 }
-
-
-
