adjust section bg and color

--- a/src/app/nav-section/nav-section.component.html
+++ b/src/app/nav-section/nav-section.component.html
@@ -1,7 +1,7 @@
-<div style="display: flex; align-items: center; height: 40px;   font: var(--mat-sys-title-medium);
+<div style="display: flex; align-items: center; height: 40px; background: cadetblue;  font: var(--mat-sys-title-medium);
   box-sizing: border-box;
   padding: 4px 16px;
-  color: var(--mat-sys-on-surface-variant);
+  color: white;
   flex: 0 0 auto;">
   <div class="nav-section-label">{{ label() }}</div>
 </div>
