--- a/src/app/nav-section/nav-section.component.html
+++ b/src/app/nav-section/nav-section.component.html
@@ -1,4 +1,4 @@
-<div style="display: flex; align-items: center; height: 40px; background: cadetblue;  font: var(--mat-sys-title-medium);
+<div style="display: flex; align-items: center; height: 40px; background: var(--mat-sys-secondary);  font: var(--mat-sys-title-medium);
   box-sizing: border-box;
   padding: 4px 16px;
   color: white;
