--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -103,3 +103,7 @@ th.mat-mdc-header-cell.numeric {
   color: var(--mat-sys-on-surface-variant);
   font-style: italic;
 }
+
+.empty-selection {
+  font-size: var(--mat-sys-headline-large);
+}
