refactor: replace isNumber utility function with standalone IsNumberPipe for improved clarity and reusability

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,7 +46,11 @@
               <th mat-header-cell *matHeaderCellDef [mat-sort-header]="columnName">
                 {{ columnName }}
               </th>
-              <td mat-cell *matCellDef="let row" [class.numeric]="isNumber(row[columnName])">
+              <td
+                mat-cell
+                *matCellDef="let row"
+                [class.numeric]="row[columnName] | isNumber"
+              >
                 {{ row[columnName] }}
               </td>
             </ng-container>
