refactor: rename selection handling methods for clarity and consistency

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
           emptyText="Keine Tabellen gefunden"
           [items]="tableItems()"
           [selected]="selectedListItem()"
-          (selectionChange)="onSelectListItem($event)"
+          (selectionChange)="onSelectionChange($event)"
         >
         </app-nav-section>
 
@@ -18,7 +18,7 @@
           emptyText="Keine Ansichten gefunden"
           [items]="viewItems()"
           [selected]="selectedListItem()"
-          (selectionChange)="onSelectListItem($event)"
+          (selectionChange)="onSelectionChange($event)"
         >
         </app-nav-section>
       }
